--- a/public/lookbook-assets/page.css
+++ b/public/lookbook-assets/page.css
@@ -5,6 +5,7 @@
 
   --lookbook-color-white: #fff;
   --lookbook-color-black: #000;
+  --lookbook-color-transparent: transparent;
 
   --lookbook-color-gray-50: hsl(0, 0%, 98%);
   --lookbook-color-gray-100: hsl(240, 5%, 96%);
@@ -322,6 +323,12 @@
    */
 
   --lookbook-status-bar-height: 1.5rem;
+
+  /*
+   * Nav
+   */
+
+  --lookbook-nav-item-height: 1.75rem;
 }
 :root,
 :host,
@@ -454,6 +461,95 @@
     --lookbook-color-danger-200
   );
   --lookbook-system-message-icon-color-error: var(--lookbook-color-danger-300);
+
+  /*
+   * Breadcrumbs
+   */
+
+  --lookbook-breadrumbs-color: var(--lookbook-color-base-400);
+  --lookbook-breadrumbs-color-current: var(--lookbook-color-base-600);
+  --lookbook-breadrumbs-link-color: var(--lookbook-color-base-400);
+  --lookbook-breadrumbs-link-color-hover: var(--lookbook-color-accent-600);
+
+  /*
+   * Buttons
+   */
+
+  --lookbook-button-color: var(--lookbook-color-base-500);
+  --lookbook-button-color-hover: var(--lookbook-color-base-700);
+  --lookbook-button-color-active: var(--lookbook-color-accent-700);
+
+  /*
+   * Button groups
+   */
+
+  --lookbook-button-group-divider-color: var(--lookbook-app-divider-color);
+
+  /*
+   * Nav
+   */
+
+  --lookbook-nav-item-background-color: var(--lookbook-color-transparent);
+  --lookbook-nav-item-border-color: var(--lookbook-color-transparent);
+  --lookbook-nav-item-label-color: var(--lookbook-app-color);
+  --lookbook-nav-item-icon-color: var(--lookbook-color-accent-700);
+  --lookbook-nav-item-toggle-color: var(--lookbook-color-base-600);
+
+  --lookbook-nav-item-background-color-selected: var(--lookbook-color-base-100);
+  --lookbook-nav-item-border-color-selected: var(--lookbook-color-accent-500);
+  --lookbook-nav-item-label-color-selected: var(--lookbook-app-color);
+
+  --lookbook-nav-placeholder-color: var(--lookbook-color-base-500);
+  --lookbook-nav-placeholder-border-color: var(--lookbook-app-divider-color);
+  --lookbook-nav-placeholder-background-color: var(--lookbook-color-white);
+
+  /*
+   * Tabs
+   */
+
+  --lookbook-tab-color: var(--lookbook-color-base-800);
+  --lookbook-tab-color-disabled: var(--lookbook-color-base-300);
+  --lookbook-tab-color-selected: var(--lookbook-color-accent-500);
+  --lookbook-tab-border-color-selected: var(--lookbook-color-accent-500);
+  --lookbook-tab-panel-color: var(--lookbook-app-color);
+  --lookbook-tab-panel-background-color: var(--lookbook-color-base-50);
+
+  /*
+   * Prose
+   */
+
+  --lookbook-prose-color: var(--lookbook-app-color);
+  --lookbook-prose-list-counter-color: var(--lookbook-color-base-600);
+  --lookbook-prose-list-marker-color: var(--lookbook-color-base-400);
+  --lookbook-prose-hr-color: var(--lookbook-color-base-600);
+  --lookbook-prose-blockquote-color: var(--lookbook-color-base-700);
+  --lookbook-prose-blockquote-border-color: var(--lookbook-color-base-300);
+  --lookbook-prose-figcaption-color: var(--lookbook-color-base-600);
+  --lookbook-prose-inline-code-color: var(--lookbook-color-accent-900);
+  --lookbook-prose-inline-code-background-color: var(--lookbook-color-base-100);
+  --lookbook-prose-code-background-color: var(
+    --lookbook-color---lookbook-color-base-800
+  );
+  --lookbook-prose-code-background-color: var(--lookbook-color-white);
+  --lookbook-prose-code-border-color: var(--lookbook-color-base-300);
+
+  /*
+   * Toolbars
+   */
+
+  --lookbook-toolbar-color: var(--lookbook-app-color);
+  --lookbook-toolbar-background-color: var(--lookbook-color-white);
+
+  /*
+   * Viewport
+   */
+
+  --lookbook-viewport-background-color: var(--lookbook-color-white);
+  --lookbook-viewport-dimensions-background-color: var(
+    --lookbook-color-base-200
+  );
+  --lookbook-viewport-handle-background-color: var(--lookbook-color-white);
+  --lookbook-viewport-handle-icon-color: var(--lookbook-color-base-500);
 }
 @font-face {
   font-family: "Inter";
@@ -871,13 +967,13 @@ tr:not(:last-child) {
     "URW Gothic", source-sans-pro, sans-serif;
   font-family: var(--lookbook-font-prose);
   color: hsl(240, 6%, 10%);
-  color: var(--lookbook-color-base-900);
+  color: var(--lookbook-prose-color);
   font-size: 1rem;
   line-height: 1.75;
 }
 [data-component="prose"] [class~="lead"] {
     color: hsl(240, 6%, 10%);
-    color: var(--lookbook-color-base-900);
+    color: var(--lookbook-prose-color);
     font-size: 1.25em;
     line-height: 1.6;
     margin-top: 1.2em;
@@ -906,7 +1002,7 @@ tr:not(:last-child) {
     position: absolute;
     font-weight: 400;
     color: hsl(240, 5%, 34%);
-    color: var(--lookbook-color-base-600);
+    color: var(--lookbook-prose-list-counter-color);
   }
 [data-component="prose"] ul > li {
     position: relative;
@@ -916,7 +1012,7 @@ tr:not(:last-child) {
     content: "";
     position: absolute;
     background-color: hsl(240, 5%, 65%);
-    background-color: var(--lookbook-color-base-400);
+    background-color: var(--lookbook-prose-list-marker-color);
     border-radius: 50%;
     width: 0.375em;
     height: 0.375em;
@@ -924,8 +1020,8 @@ tr:not(:last-child) {
     left: 0.25em;
   }
 [data-component="prose"] hr {
-    border-color: hsl(240, 5%, 84%);
-    border-color: var(--lookbook-app-divider-color);
+    border-color: hsl(240, 5%, 34%);
+    border-color: var(--lookbook-prose-hr-color);
     border-top-width: 1px;
     margin-top: 3em;
     margin-bottom: 3em;
@@ -933,10 +1029,11 @@ tr:not(:last-child) {
 [data-component="prose"] blockquote {
     font-weight: 500;
     font-style: italic;
-    color: #1a202c;
+    color: hsl(240, 5%, 26%);
+    color: var(--lookbook-prose-blockquote-color);
     border-left-width: 0.25rem;
     border-left-color: hsl(240, 5%, 84%);
-    border-left-color: var(--lookbook-app-divider-color);
+    border-left-color: var(--lookbook-prose-blockquote-border-color);
     quotes: "\201C" "\201D" "\2018" "\2019";
     margin-top: 1.6em;
     margin-bottom: 1.6em;
@@ -978,7 +1075,7 @@ tr:not(:last-child) {
   }
 [data-component="prose"] figure figcaption {
     color: hsl(240, 5%, 34%);
-    color: var(--lookbook-color-base-600);
+    color: var(--lookbook-prose-figcaption-color);
     font-size: 0.875em;
     line-height: 1.4285714;
     margin-top: 0.8571429em;
@@ -990,7 +1087,7 @@ tr:not(:last-child) {
     Menlo, Consolas, "DejaVu Sans Mono", monospace;
     font-family: var(--lookbook-font-mono);
     background-color: hsl(240, 5%, 96%);
-    background-color: var(--lookbook-color-base-100);
+    background-color: var(--lookbook-prose-inline-code-background-color);
     padding-left: 0.25rem;
     padding-right: 0.25rem;
     padding-left: var(--lookbook-spacing-2x-small);
@@ -998,52 +1095,8 @@ tr:not(:last-child) {
     border-radius: 0.1875rem;
     border-radius: var(--lookbook-border-radius-small);
     color: hsl(242, 47%, 34%);
-    color: var(--lookbook-color-accent-900);
+    color: var(--lookbook-prose-inline-code-color);
   }
-/* 
-
-  code::before {
-    content: "`";
-  }
-
-  code::after {
-    content: "`";
-  }
-
-  pre {
-    color: var(--lookbook-color-base-300);
-    background-color: var(--lookbook-color-base-800);
-    overflow-x: auto;
-    font-size: 0.875em;
-    line-height: 1.7142857;
-    margin-top: 1.7142857em;
-    margin-bottom: 1.7142857em;
-    border-radius: 0.375rem;
-    padding-top: 0.8571429em;
-    padding-right: 1.1428571em;
-    padding-bottom: 0.8571429em;
-    padding-left: 1.1428571em;
-  }
-
-  pre code {
-    background-color: transparent;
-    border-width: 0;
-    border-radius: 0;
-    padding: 0;
-    font-weight: 400;
-    color: inherit;
-    font-size: inherit;
-    font-family: inherit;
-    line-height: inherit;
-  }
-
-  pre code::before {
-    content: "";
-  }
-
-  pre code::after {
-    content: "";
-  } */
 [data-component="prose"] table {
     width: 100%;
     table-layout: auto;
@@ -1053,23 +1106,11 @@ tr:not(:last-child) {
     font-size: 0.875em;
     line-height: 1.7142857;
   }
-[data-component="prose"] thead {
-    color: #1a202c;
-    font-weight: 600;
-    border-bottom-width: 1px;
-    border-bottom-color: hsl(240, 5%, 84%);
-    border-bottom-color: var(--lookbook-app-divider-color);
-  }
 [data-component="prose"] thead th {
     vertical-align: bottom;
     padding-right: 0.5714286em;
     padding-bottom: 0.5714286em;
     padding-left: 0.5714286em;
-  }
-[data-component="prose"] tbody tr {
-    border-bottom-width: 1px;
-    border-bottom-color: hsl(240, 5%, 84%);
-    border-bottom-color: var(--lookbook-app-divider-color);
   }
 [data-component="prose"] tbody tr:last-child {
     border-bottom-width: 0;
@@ -1122,26 +1163,6 @@ tr:not(:last-child) {
 [data-component="prose"] ol > li:before {
     left: 0;
   }
-/*  > ul > li p {
-    margin-top: 0.75em;
-    margin-bottom: 0.75em;
-  }
- 
-  > ul > li > *:first-child {
-    margin-top: 1.25em;
-  }
-
-  > ul > li > *:last-child {
-    margin-bottom: 1.25em;
-  }
-
-  > ol > li > *:first-child {
-    margin-top: 1.25em;
-  }
-
-  > ol > li > *:last-child {
-    margin-bottom: 1.25em;
-  } */
 [data-component="prose"] ul ul,
   [data-component="prose"] ul ol,
   [data-component="prose"] ol ul,
@@ -1180,10 +1201,11 @@ tr:not(:last-child) {
     margin-bottom: 0;
   }
 [data-component="prose"] [data-component="code"] {
-    background-color: hsl(0, 0%, 98%);
-    background-color: var(--lookbook-color-base-50);
+    color: var(--lookbook-prose-code-color);
+    background-color: #fff;
+    background-color: var(--lookbook-prose-code-background-color);
     border: 1px solid hsl(240, 5%, 84%);
-    border: 1px solid var(--lookbook-color-base-300);
+    border: 1px solid var(--lookbook-prose-code-border-color);
     border-radius: 0.1875rem;
     border-radius: var(--lookbook-border-radius-small);
     margin-top: 1.75rem;
