--- a/app/components/lookbook/ui/elements/nav/nav.css
+++ b/app/components/lookbook/ui/elements/nav/nav.css
@@ -36,10 +36,10 @@
 
   .nav-placeholder {
     font-size: var(--lookbook-font-size-small);
-    background-color: var(--lookbook-color-white);
-    color: var(--lookbook-color-base-500);
+    background-color: var(--lookbook-nav-placeholder-background-color);
+    color: var(--lookbook-nav-placeholder-color);
     padding: var(--lookbook-spacing-medium);
-    border: 1px dashed var(--lookbook-color-base-300);
+    border: 1px dashed var(--lookbook-nav-placeholder-border-color);
     margin: var(--lookbook-spacing-small);
   }
 }
