--- a/app/components/lookbook/ui/elements/nav/nav_item/nav_item.css
+++ b/app/components/lookbook/ui/elements/nav/nav_item/nav_item.css
@@ -6,8 +6,9 @@
     width: 100%;
     display: flex;
     align-items: center;
-    border-left: 3px solid transparent;
+    border-left: 3px solid var(--lookbook-nav-item-border-color);
     cursor: pointer;
+    bacground-color: var(--lookbook-nav-item-background-color);
   }
 
   .nav-item-indentation {
@@ -17,13 +18,13 @@
   }
 
   .nav-item-toggle {
-    width: 28px;
+    width: var(--lookbook-nav-item-height);
     flex: none;
 
     button {
       flex: none;
-      width: 28px;
-      height: 28px;
+      width: var(--lookbook-nav-item-height);
+      color: var(--lookbook-nav-item-toggle-color);
     }
   }
 
@@ -31,15 +32,16 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 28px;
+    height: var(--lookbook-nav-item-height);
     min-width: 0;
     font-size: var(--lookbook-font-size-small);
+    color: var(--lookbook-nav-item-label-color);
 
     .icon {
       flex: none;
       margin-right: var(--lookbook-spacing-x-small);
       height: var(--lookbook-spacing-medium);
-      color: var(--lookbook-color-accent-700);
+      color: var(--lookbook-nav-item-icon-color);
     }
 
     span {
@@ -55,8 +57,12 @@
 
   &[aria-selected="true"] {
     > .nav-item-item {
-      background-color: var(--lookbook-color-base-100);
-      border-left-color: var(--lookbook-color-accent-500);
+      background-color: var(--lookbook-nav-item-background-color-selected);
+      border-left-color: var(--lookbook-nav-item-border-color-selected);
+
+      .nav-item-label {
+        color: var(--lookbook-nav-item-label-color-selected);
+      }
 
       .nav-item-label {
         font-weight: var(--lookbook-font-weight-semibold);
