--- a/app/components/lookbook/ui/elements/pane/tab_panel/tab_panel.css
+++ b/app/components/lookbook/ui/elements/pane/tab_panel/tab_panel.css
@@ -2,7 +2,8 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
-  background-color: var(--lookbook-color-base-50);
+  color: var(--lookbook-tab-panel-color);
+  background-color: var(--lookbook-tab-panel-background-color);
 
   .tab-panel-content {
     z-index: 1;
