--- a/app/components/lookbook/ui/elements/prose/prose.css
+++ b/app/components/lookbook/ui/elements/prose/prose.css
@@ -1,11 +1,11 @@
 [data-component="prose"] {
   font-family: var(--lookbook-font-prose);
-  color: var(--lookbook-color-base-900);
+  color: var(--lookbook-prose-color);
   font-size: 1rem;
   line-height: 1.75;
 
   [class~="lead"] {
-    color: var(--lookbook-color-base-900);
+    color: var(--lookbook-prose-color);
     font-size: 1.25em;
     line-height: 1.6;
     margin-top: 1.2em;
@@ -37,7 +37,7 @@
     content: counter(list-counter) ".";
     position: absolute;
     font-weight: 400;
-    color: var(--lookbook-color-base-600);
+    color: var(--lookbook-prose-list-counter-color);
   }
 
   ul > li {
@@ -48,7 +48,7 @@
   ul > li::before {
     content: "";
     position: absolute;
-    background-color: var(--lookbook-color-base-400);
+    background-color: var(--lookbook-prose-list-marker-color);
     border-radius: 50%;
     width: 0.375em;
     height: 0.375em;
@@ -57,7 +57,7 @@
   }
 
   hr {
-    border-color: var(--lookbook-app-divider-color);
+    border-color: var(--lookbook-prose-hr-color);
     border-top-width: 1px;
     margin-top: 3em;
     margin-bottom: 3em;
@@ -66,9 +66,9 @@
   blockquote {
     font-weight: 500;
     font-style: italic;
-    color: #1a202c;
+    color: var(--lookbook-prose-blockquote-color);
     border-left-width: 0.25rem;
-    border-left-color: var(--lookbook-app-divider-color);
+    border-left-color: var(--lookbook-prose-blockquote-border-color);
     quotes: "\201C" "\201D" "\2018" "\2019";
     margin-top: 1.6em;
     margin-bottom: 1.6em;
@@ -113,7 +113,7 @@
   }
 
   figure figcaption {
-    color: var(--lookbook-color-base-600);
+    color: var(--lookbook-prose-figcaption-color);
     font-size: 0.875em;
     line-height: 1.4285714;
     margin-top: 0.8571429em;
@@ -123,56 +123,11 @@
     font-size: 0.8em;
     display: inline-block;
     font-family: var(--lookbook-font-mono);
-    background-color: var(--lookbook-color-base-100);
+    background-color: var(--lookbook-prose-inline-code-background-color);
     padding-inline: var(--lookbook-spacing-2x-small);
     border-radius: var(--lookbook-border-radius-small);
-    color: var(--lookbook-color-accent-900);
+    color: var(--lookbook-prose-inline-code-color);
   }
-
-  /* 
-
-  code::before {
-    content: "`";
-  }
-
-  code::after {
-    content: "`";
-  }
-
-  pre {
-    color: var(--lookbook-color-base-300);
-    background-color: var(--lookbook-color-base-800);
-    overflow-x: auto;
-    font-size: 0.875em;
-    line-height: 1.7142857;
-    margin-top: 1.7142857em;
-    margin-bottom: 1.7142857em;
-    border-radius: 0.375rem;
-    padding-top: 0.8571429em;
-    padding-right: 1.1428571em;
-    padding-bottom: 0.8571429em;
-    padding-left: 1.1428571em;
-  }
-
-  pre code {
-    background-color: transparent;
-    border-width: 0;
-    border-radius: 0;
-    padding: 0;
-    font-weight: 400;
-    color: inherit;
-    font-size: inherit;
-    font-family: inherit;
-    line-height: inherit;
-  }
-
-  pre code::before {
-    content: "";
-  }
-
-  pre code::after {
-    content: "";
-  } */
 
   table {
     width: 100%;
@@ -184,23 +139,11 @@
     line-height: 1.7142857;
   }
 
-  thead {
-    color: #1a202c;
-    font-weight: 600;
-    border-bottom-width: 1px;
-    border-bottom-color: var(--lookbook-app-divider-color);
-  }
-
   thead th {
     vertical-align: bottom;
     padding-right: 0.5714286em;
     padding-bottom: 0.5714286em;
     padding-left: 0.5714286em;
-  }
-
-  tbody tr {
-    border-bottom-width: 1px;
-    border-bottom-color: var(--lookbook-app-divider-color);
   }
 
   tbody tr:last-child {
@@ -267,27 +210,6 @@
     left: 0;
   }
 
-  /*  > ul > li p {
-    margin-top: 0.75em;
-    margin-bottom: 0.75em;
-  }
- 
-  > ul > li > *:first-child {
-    margin-top: 1.25em;
-  }
-
-  > ul > li > *:last-child {
-    margin-bottom: 1.25em;
-  }
-
-  > ol > li > *:first-child {
-    margin-top: 1.25em;
-  }
-
-  > ol > li > *:last-child {
-    margin-bottom: 1.25em;
-  } */
-
   ul ul,
   ul ol,
   ol ul,
@@ -337,8 +259,9 @@
   }
 
   [data-component="code"] {
-    background-color: var(--lookbook-color-base-50);
-    border: 1px solid var(--lookbook-color-base-300);
+    color: var(--lookbook-prose-code-color);
+    background-color: var(--lookbook-prose-code-background-color);
+    border: 1px solid var(--lookbook-prose-code-border-color);
     border-radius: var(--lookbook-border-radius-small);
     margin-block: var(--lookbook-spacing-x-large);
   }
