--- a/app/components/lookbook/ui/elements/viewport/viewport.css
+++ b/app/components/lookbook/ui/elements/viewport/viewport.css
@@ -4,7 +4,7 @@
   min-height: 0;
   overflow: hidden;
   position: relative;
-  background-color: #fff;
+  background-color: var(--lookbook-viewport-background-color);
   user-select: none;
   touch-action: none;
 
@@ -34,7 +34,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background: var(--lookbook-color-base-200);
+      background: var(--lookbook-viewport-dimensions-background-color);
       opacity: 0.7;
     }
 
@@ -81,8 +81,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
-    color: var(--lookbook-color-base-500);
+    background-color: var(--lookbook-viewport-handle-background-color);
+    color: var(--lookbook-viewport-handle-icon-color);
   }
 
   .viewport-handle-x {
